[gd_scene load_steps=6 format=3 uid="uid://clmal6n8hm6u7"]

[ext_resource type="Script" path="res://src/day_18/day_18_part_1.gd" id="1_0xj2y"]
[ext_resource type="PackedScene" uid="uid://ij80ps8ylook" path="res://src/mouse_camera.tscn" id="2_pfio5"]
[ext_resource type="Texture2D" uid="uid://bm40j1oyvefe0" path="res://src/day_18/tilemap.png" id="3_k5w8g"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bs0kx"]
texture = ExtResource("3_k5w8g")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
2:3/0 = 0
0:3/0 = 0

[sub_resource type="TileSet" id="TileSet_2i4rr"]
sources/0 = SubResource("TileSetAtlasSource_bs0kx")

[node name="Day18" type="Node2D"]
script = ExtResource("1_0xj2y")

[node name="MouseCamera" parent="." instance=ExtResource("2_pfio5")]

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
tile_set = SubResource("TileSet_2i4rr")
format = 2
layer_1/tile_data = PackedInt32Array()

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load:"

[node name="LoadTestInputButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "test_input.txt"

[node name="LoadRealInputButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "input.txt"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="FloodFillCenterButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Flood Fill Center"

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Lagoon Volume:"

[node name="LagoonVolumeLabel" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Not Yet Calculated"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadTestInputButton" to="." method="load_and_repopulate" binds= ["res://src/day_18/test_input.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/LoadRealInputButton" to="." method="load_and_repopulate" binds= ["res://src/day_18/input.txt"]]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer2/FloodFillCenterButton" to="." method="flood_fill_center"]
